Finished project Structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/market_db
+spring.datasource.username=adm
+spring.datasource.password=pwd
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.datasource.maximum-pool-size=30
+spring.datasource.minimum-idle=10
+spring.datasource.maximum-timeout=120000
+spring.datasource.connection-lifetime=600000
+spring.datasource.hikari.initialization-fail-timeout=15000
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.flyway.baselineOnMigrate = true
+
+spring.thymeleaf.prefix=classpath:/templates
